--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "rknt-website",
-	"version": "0.0.1",
+	"version": "0.1.1",
 	"description": "A simple, static homepage for the RKNT Invenio group",
 	"scripts": {
 		"dev": "svelte-kit dev --open",
@@ -21,6 +21,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-node": "^1.0.0-next.68",
+		"@sveltejs/adapter-static": "^1.0.0-next.28",
 		"@sveltejs/kit": "next",
 		"@typescript-eslint/eslint-plugin": "^5.11.0",
 		"@typescript-eslint/parser": "^5.11.0",
@@ -40,8 +41,5 @@
 	"volta": {
 		"node": "16.14.0"
 	},
-	"packageManager": "pnpm@6.30.0",
-	"dependencies": {
-		"@sveltejs/adapter-static": "^1.0.0-next.28"
-	}
+	"packageManager": "pnpm@6.32.2"
 }
