--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "rknt-website",
-	"version": "0.1.3",
+	"version": "0.1.4",
 	"description": "A simple, static homepage for the RKNT Invenio group",
 	"scripts": {
 		"dev": "svelte-kit dev --open",
@@ -22,7 +22,7 @@
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-node": "^1.0.0-next.68",
 		"@sveltejs/adapter-static": "^1.0.0-next.28",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "1.0.0-next.291",
 		"@typescript-eslint/eslint-plugin": "^5.11.0",
 		"@typescript-eslint/parser": "^5.11.0",
 		"eslint": "^7.32.0",
@@ -33,7 +33,9 @@
 		"sass": "^1.49.7",
 		"svelte": "^3.46.4",
 		"svelte-check": "^2.4.3",
+		"svelte-image": "^0.2.9",
 		"svelte-preprocess": "^4.10.2",
+		"svelte-sequential-preprocessor": "^0.0.7",
 		"tslib": "^2.3.1",
 		"typescript": "^4.5.5"
 	},
